--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,323 @@
+:root {
+  --color-primary: #dd1f33;
+  --color-background: #f3f4f5;
+  --color-body-darker: #5b5b5b;
+  --color-border: #d4d4d4;
+  --border-redius: 40px;
+}
+
 .App {
+  width: 100vw;
+  height: 100vh;
+  background: rgb(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* choose option window */
+.window {
+  width: 750px;
+  height: 550px;
+  background: var(--color-background);
+  border-radius: 10px;
+  border: 1px solid var(--color-border);
+  padding: 0;
+  position: relative;
+}
+
+.dropdownContainer {
+  margin-left: 20px;
+}
+
+/* OptionHeader */
+
+.header {
+  font-weight: 500;
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/* button */
+
+.btn {
+  height: 30px;
+  background: var(--color-primary);
+  outline: none;
+  box-shadow: none;
+  border: 0;
+  border-radius: 5px;
+  margin-top: 0;
+}
+.btn:hover {
+  cursor: pointer;
+}
+.btn-container {
+  width: 710px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.btn-submit {
+  height: 35px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+.btn-close {
+  width: 30px;
+  height: 30px;
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--color-background);
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+/* drop down */
+
+.dropdown-header {
+  height: 35px;
+  width: 350px;
+  background: white;
+  border: 1px solid var(--color-border);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.dropdown-base {
+  position: relative;
+  width: 350px;
+  transform: all 0.3s;
+  margin-top: 5px;
+}
+
+.dropdown__arrow {
+  height: 100%;
+  width: 33px;
+  border: 0;
+  border-left: 1px solid var(--color-border);
+  border-radius: 0px 5px 5px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.dropdown__lable {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: 1.6rem;
+  padding: 5px;
+}
+
+.dropdown--list {
+  width: 350px;
+  height: 200px;
+  background: white;
+  position: absolute;
+  top: 35px;
+  border-radius: 5px 0px;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.3s;
+  max-height: 0px;
+  border: 1px solid var(--color-border);
+  border-top: 0;
+}
+
+.expanded .dropdown--list {
+  max-height: 200px;
+  opacity: 1;
+  z-index: 1;
+}
+
+.list-item {
+  height: 35px;
+  width: 100%;
+  padding: 3px;
+  padding-left: 10px;
+  border-bottom: 1px solid var(--color-border);
+  border-top: 0;
+  font-size: 1.6rem;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+/* icon */
+
+.icon {
+  width: 40px;
+  height: 40px;
+  fill: var(--color-border);
+}
+
+.icon--small {
+  width: 20px;
+  height: 20px;
+}
+
+/* QuantityInput */
+
+.itemlabel {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+.qty {
+  width: 50px;
+  margin-left: 20px;
+  text-align: center;
+}
+.qty-note {
+  width: 410px;
+  margin-left: 20px;
+}
+
+.qty.error {
+  border: 1px solid var(--color-primary);
+}
+.qty-note.error {
+  border: 1px solid var(--color-primary);
+}
+
+.input {
+  border: 1px solid var(--color-border);
+  border-radius: 5px;
+  outline: 0;
+  font-size: 1.6rem;
+  font-weight: 500;
+  height: 35px;
+  padding: 5px;
+}
+
+/* quantityList */
+
+.quantityList {
+  width: 710px;
+  height: 240px;
+  border: 1px solid var(--color-border);
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.quantityTable {
+  width: 100%;
+  text-align: left;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.productcol {
+  width: 218px;
+}
+.qtycol {
+  width: 56px;
+}
+.notecol {
+}
+
+/* RuningTally */
+
+.RuningTally-base {
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+  z-index: 2;
+  width: 750px;
+  height: 550px;
+  background: var(--color-background);
+  border-radius: 10px;
+  border: 1px solid var(--color-border);
+  padding: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.RuningTally-base.expanded {
+  max-width: 750px;
+  opacity: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tally-header {
+  display: inline-block;
+  padding-top: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* RunningTallyColBtn */
+.colbtn-container {
+  float: right;
+  margin-right: 20px;
+}
+.colBtn {
+  clip-path: polygon(25% 0%, 100% 0, 100% 100%, 25% 100%, 9% 51%);
+  width: 40px;
+  height: 90px;
+  background: var(--color-primary);
+  transition: all 0.3s;
+  cursor: pointer;
+  font-size: 14px;
+  color: #222;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.colBtn:hover {
+  width: 48px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.viewTally {
+  white-space: nowrap;
+  transform: rotate(90deg);
+  font-weight: 400;
 }
+
+/* runningTally-table */
+.runningTally-table {
+  width: 100%;
+  margin: 20px;
+  font-size: 16px;
+}
+.runningTally-table th {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.runningTally-table td  {
+  padding: 10px;
+}
+
+.table-container{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.table-item {
+  width: 40%;
+}
+.table-qty {
+  
+}
+.table-note {
+  width: 40%;
+}
+
+
